fixed height and header z-index

--- a/styles/addTask.css
+++ b/styles/addTask.css
@@ -1,7 +1,6 @@
 
 body {
   margin: 0;
-  overflow: hidden;
   background-color: rgb(246, 247, 248);
   height: 100%;
   box-sizing: border-box;
