--- a/styles/header.css
+++ b/styles/header.css
@@ -7,13 +7,10 @@
     flex-direction: column;
     align-items: center;
     overflow-x: hidden;
-
-
 }
 
 header {
     width: 100%;
-    /* max-width: 1920px; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -24,7 +21,7 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: -1;
     box-sizing: border-box;
 }
 
